# secretary

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket-template.toml  Rocket.toml  build.rs
.github/workflows/: aarch64-unknown-linux-musl.yml  autotag.yml  full.yml  release.yml  x86_64-unknown-linux-gnu.yml
config-template/: Rocket.toml
crates/bark/: Cargo.toml
crates/bark/src/: lib.rs
crates/inbox/: Cargo.toml
crates/inbox/src/: api.rs  drop.rs  get.rs  lib.rs  list.rs  metadata.rs  new.rs
crates/kindle/: Cargo.toml
crates/kindle/src/: alpha.rs  bravo.rs  charlie.rs  lib.rs  shared.rs
crates/let_server_run/: Cargo.toml
crates/let_server_run/src/: agent.rs  lib.rs
crates/let_server_run/src/agent/: mod.rs
crates/let_server_run/src/agent/executor/: arg_parser.rs  echo.rs  mod.rs  parsers.rs  shell.rs
crates/main/: Cargo.toml  build.rs
crates/main/src/: fairings.rs  kindle.rs  let_server_run.rs  logger.rs  main.rs  qweather.rs
crates/qweather/: Cargo.toml
crates/qweather/src/: api.rs  lib.rs
crates/tsdb/: Cargo.toml
crates/tsdb/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: database.rs  lib.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs  qweather.rs
scripts/: build.sh  deploy.sh  install.sh  utils.sh
src/: kindle.rs  let_server_run.rs  logger.rs  main.rs  qweather.rs  tsdb.rs
src/kindle/: alpha.rs  bravo.rs  charlie.rs  mod.rs  shared.rs
src/qweather/: api.rs  mod.rs
ui/: .prettierrc.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/inbox/: index.html
ui/kindle/debug/: index.html
ui/src/inbox/: App.vue  main.js  style.css
ui/src/inbox/components/: ItemList.vue  Uploader.vue
ui/src/inbox/lib/: structs.ts  utils.ts
ui/src/kindle/: Debug.vue  debug.js  style.css  vite-env.d.ts
