[package]
name = "lighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
bincode = "1.3.3"
chrono = "0.4.31"
conv = "0.3.3"
cron = "0.12.0"
image = "0.24.7"
imageproc = "0.23.0"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking", "json", "gzip", "rustls-tls"], default-features = false }
rocket = "0.5.0"
rusttype = "0.9.3"
serde = "1.0.193"
serde_json = "1.0.108"
sled = "0.34.7"
