[package]
name = "secretary"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.24.1"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]

[dependencies]
bark = { path = "crates/bark" }
utils = { path = "crates/utils" }
kindle = { path = "crates/kindle" }
qweather = { path = "crates/qweather" }
let_server_run = { path = "crates/let_server_run" }
inbox = { path = "crates/inbox" }
tsdb = { path = "crates/tsdb" }
chrono = "0.4.31"
rocket = "0.5.0"
anyhow = "1.0.78"
once_cell = "1.19.0"
rand = "0.8.5"
rusttype = "0.9.3"
image = "0.24.7"
tokio = "1.35.1"
futures = "0.3.30"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.13", features = ["derive"] }
influxdb2 = { version = "0.4.5", default-features = false, features = ["rustls"] }
cron = "0.12.0"

[build-dependencies]
anyhow = "1.0.78"
chrono = "0.4.31"
