[package]
name = "bark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = "0.10.13"
log = "0.4.20"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
