[package]
    name = "kindle"
    version.workspace = true
    edition.workspace = true

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    utils = { path = "../utils" }
    qweather = { path = "../qweather" }
    anyhow = "1.0.78"
    chrono = "0.4.31"
    image = "0.24.7"
    imageproc = "0.23.0"
    once_cell = "1.19.0"
    rand = "0.8.5"
    rusttype = "0.9.3"
    log = "0.4.20"
