[package]
name = "let_server_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
cron = "0.12.0"
figment = "0.10.13"
log = "0.4.20"
nom = "7.1.3"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["process", "time"] }
