[package]
    name = "secretary"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bark = { path = "../bark" }
utils = { path = "../utils" }
kindle = { path = "../kindle" }
qweather = { path = "../qweather" }
let_server_run = { path = "../let_server_run" }
chrono = "0.4.31"
rocket = "0.5.0"
anyhow = "1.0.78"
once_cell = "1.19.0"
rand = "0.8.5"
rusttype = "0.9.3"
image = "0.24.7"
tokio = "1.35.1"
futures = "0.3.30"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.13", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.78"
chrono = "0.4.31"
