[package]
name = "qweather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
chrono = "0.4.31"
cron = "0.12.0"
figment = "0.10.13"
log = "0.4.20"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["json", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
tokio = "1.35.1"
