[package]
name = "tsdb"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
figment = "0.10.14"
futures = "0.3.30"
influxdb2 = { version = "0.4.5", default-features = false, features = ["rustls"] }
log = "0.4.20"
once_cell = "1.19.0"
tokio = "1.35.1"
