[package]
    name = "lighter"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    utils = { path = "../utils" }
    chrono = "0.4.31"
    kindle = { path = "../kindle" }
    qweather = { path = "../qweather" }
    rocket = "0.5.0"
anyhow = "1.0.78"
once_cell = "1.19.0"
rand = "0.8.5"
rusttype = "0.9.3"
image = "0.24.7"
